Fix to admin panel

--- a/modules/admin/templates/admin/entpost.mustache
+++ b/modules/admin/templates/admin/entpost.mustache
@@ -172,28 +172,29 @@
 
 		$('button#submit_{{id}}').click(function(){
 
-			var $me = $(this);
-			var thisform = document.getElementById('form_{{id}}');
-			var fd = new FormData(thisform);
-
-			console.log(thisform);
+			var $me = $('form#form_{{id}}');
 
 			console.log(fd);
 			var id1 = $me.find('input[name="id1"], select[name="id1"]').val();
+			console.log(id1);
 			id1 = id1==undefined ? '' : id1;
 
 			console.log(id1);
 
 		//	{{#file_upload}}
 			console.log("File Upload");
-		//	{{/file_upload}}
+			var thisform = document.getElementById('form_{{id}}');
+			var fd = new FormData(thisform);
+		//	{{/file_upload}}{{^file_upload}}
+			var fd = $me.serialize();
+		//  {{/file_upload}}
 
 			$.ajax({
 				type : '{{api_method}}',
 				url : '{{usage}}' + id1,
 				data : fd,
-				processData:false,
-				contentType:false,
+			//	processData:false,
+			//	contentType:false,
 				success : function(data)
 				{
 					console.log(data);
