--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -2,8 +2,7 @@
 {{#payload}}
 
 <div class="row-fluid">
-    <img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" style="float:left;"/>
-    {{poster}} {{comment_date}}<br/>
+    <div class="user-photo"><img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />{{poster}} {{comment_date}}</div>
     <p>{{comment}}</p>
 </div>
 {{/payload}}
