--- a/html/css/app.css
+++ b/html/css/app.css
@@ -22,6 +22,7 @@ header .searchform { float:left; margin:6px 15px; }
 header .searchform form { margin-bottom:0; }
 header .account { float:right; }
 header .photo { float:left; margin-right:10px; }
+header .photo img { width:32px; }
 header .userlinks { float:left; margin-top:5px; }
 header .userlinks .dropdown-toggle { min-width:200px; font-weight:bold; }
 header .userlinks .dropdown-menu { left:auto; right:0; top:25px; }
@@ -34,3 +35,4 @@ header .signup-email { margin:0 5px; }
 #main .videothumb { float:left; }
 #main .roster { float:left; }
 #main .video { float:left; }
+#main .user-photo img { width:32px; margin-right:10px; }
