--- a/html/packages/site/templates/comment-form.html
+++ b/html/packages/site/templates/comment-form.html
@@ -3,6 +3,7 @@
 
 <form>
 <div class="row-fluid">
+    <div class="field-message submit-result"></div>
     <div class="user-photo"><img src="{{base_url}}{{user_picture}}" alt="{{name}}" />{{name}}</div>
     <textarea cols="100" rows="5" id="new-comment" placeholder="{{comment_placeholder}}"></textarea>    
     <input type="button" id="comment-submit" value="Submit"/>
