change API&frontend code, make them match each other

--- a/html/pages/team/templates/header.html
+++ b/html/pages/team/templates/header.html
@@ -3,7 +3,7 @@
 <div class="row-fluid">
     <div class="span4 textcenter">
         {{#picture}}
-        <img src="{{base_url}}{{picture}}" alt="{{name}}" />
+        <img src="{{picture}}" alt="{{name}}" />
         {{/picture}}
     </div>
     <div class="span8">
