--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -27,7 +27,7 @@
         <div id="image-wrap" class="clearfix">
         </div>
         
-        <div id="commenton-wrap" class="clearfix">
+        <div id="commenton-wrap" class="clearfix" style="border:1px solid red;">
         </div>
         
     </div>
