fix frontend error, display my clubs page

--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -6,7 +6,8 @@
 <div class="row-fluid">
     <div class="span4" id="main-sidebar">
     
-        <div id="add-media" class="clearfix">
+        <div id="add-media" class="clearfix" style="border:1px solid green;height:10px;">
+			add media
         </div>
         
         <div id="org-wrap" class="clearfix">
@@ -28,7 +29,11 @@
         </div>
         
         <div id="commenton-wrap" class="clearfix" style="border:1px solid red;">
+
         </div>
+		<div id="comment_div" class="clearfix" style="border:1px solid red;">
+		</div>
+
         
     </div>
 </div>
