--- a/html/pages/registration/templates/fbimage-board.html
+++ b/html/pages/registration/templates/fbimage-board.html
@@ -1,7 +1,7 @@
 
 {{#payload}}
-    <div class="textcenter pane">
-        <img id="image-select" src="{{image_url}}" alt="{{image_title}}"/>
+    <div class="textcenter fbimagecontainer pane">
+        <img id="image-select" src="{{original}}" alt="{{image_title}}"/>
         <div class="coords" style="display:none;">
             <div>crop x <input name="crop-x" type="hidden" /></div>
             <div>crop y <input name="crop-y" type="hidden" /></div>
