--- a/html/pages/registration/templates/fbimage-item.html
+++ b/html/pages/registration/templates/fbimage-item.html
@@ -1,6 +1,6 @@
 
 {{#payload}}
-<img src="{{image_url}}" alt="{{image_title}}"/><br/>
+<img src="{{thumbnail}}" alt="Thumb"/>
 {{#num_votes}}{{num_votes}} Votes{{/num_votes}}
 {{/payload}}
 
