Added users_id to fbreg results

--- a/html/pages/registration/registration.css
+++ b/html/pages/registration/registration.css
@@ -15,5 +15,5 @@
 .picture-buttons {
     clear:both;
 }
-.fbimagecontainer img { display:none; }
+/* .fbimagecontainer img { display:none; } */
 .fbimagecontainer jrac_viewport img {display:block}
