Applied well class on profile setting basic info

--- a/html/pages/profilesetting/templates/layout.html
+++ b/html/pages/profilesetting/templates/layout.html
@@ -2,7 +2,7 @@
 	<div id="main-header-prof-setting">
 
 	</div>
-	<div class="row-fluid" id="section-basics-prof-setting">
+	<div class="row-fluid well" id="section-basics-prof-setting">
 	</div>
 
 	<div class="row-fluid section-teams-prof-setting" id="section-school-prof-setting">
