--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -37,7 +37,9 @@
 
 {{^authorized}}
 <div class="row-fluid textright">
-    {{signup_social_label}} <a href="{{signup_facebook_link}}" class="signup-facebook">{{signup_facebook_label}}</a> <a href="{{signup_email_link}}" class="signup-email">{{signup_email_label}}</a>
+    {{signup_social_label}} <a href="{{signup_facebook_link}}" class="signup-facebook">{{signup_facebook_label}}</a>
+	<a href="{{signup_email_link}}" class="signup-email">{{signup_email_label}}</a>
+	<a href="{{signup_email_link}}" class="go_club">go club directly</a>
 </div>
 {{/authorized}}
 
