--- a/html/pages/registration/templates/select_type.html
+++ b/html/pages/registration/templates/select_type.html
@@ -3,4 +3,6 @@
 <a href="#" class="register_facebook">Sign up through Facebook</a>
 <br/><br/> OR <br/><br/>
 <a href="#" class="register_email">Register With Email Address</a>
+
+<a href="#" class="go_club">go club directly</a>
 <div id="fb-root"></div>
