Changed Tempelate For BasicInformation Binding in Profile Settings Page

--- a/html/pages/profilesetting/templates/basic_info_header.html
+++ b/html/pages/profilesetting/templates/basic_info_header.html
@@ -1,3 +1,4 @@
+{{#payload}}
 <div class="span3">
 	<img id="img-profile-prof-setting" src="{{user_picture}}" />
 </div>
@@ -10,3 +11,4 @@
 		{{user_weight}}
 	</p>
 </div>
+{{/payload}}
