--- a/html/pages/profilesetting/profilesettings.css
+++ b/html/pages/profilesetting/profilesettings.css
@@ -15,6 +15,7 @@
 	border: 1px #66F dashed;
 	text-align: center;
 	margin: 5px 0 10px;
+	cursor: pointer;
 }
 
 .section-teams-prof-setting .sub-section-prof-setting {
@@ -28,3 +29,5 @@
 }
 
 .sub-section-prof-setting label{   display: inline;}
+
+.pointer {cursor: pointer;}
