--- a/html/pages/profilesetting/templates/layout.html
+++ b/html/pages/profilesetting/templates/layout.html
@@ -2,14 +2,17 @@
 	<div id="main-header-prof-setting">
 
 	</div>
-	<div class="row-fluid well" id="section-basics-prof-setting">
-	</div>
+	<!-- Basic Info Section Starts-->
+	<div class="row-fluid well" id="section-basics-prof-setting"></div>
+	<!-- Basic Info Section Ends-->
 
-	<div class="row-fluid section-teams-prof-setting" id="section-school-prof-setting">
+	<!-- Team Info Section Starts-->
+	<div class="row-fluid section-teams-prof-setting">
 		<div>
 			<h2> Teams </h2>
 		</div>
-		<div class="row-fluid sub-section-prof-setting well well-large">
+		<!-- High School Section Starts-->
+		<div id="section-school-prof-setting" class="row-fluid sub-section-prof-setting well well-large">
 			<div class="row-fluid">
 				<span class="spn-black-heading  well-small">High School</span>
 			</div>
@@ -17,176 +20,19 @@
 			<div id="btn-Add-School" class="clearfix div-add-dotted well-small">
 				+ Add a School
 			</div>
+			<div id="content-school-prof-setting">
+
+			</div>
 			<br/>
-			<div>
-				<span class="span2">What State</span>
-				<input type="text" id="txt-school-state" />
-			</div>
 
-			<div>
-				<span class="span2">What School?</span>
-				<input type="text" id="txt-school-school" />
-			</div>
-
-			<div>
-				<span class="span2">Add Sport</span>
-				<select id="ddl-school-sports">
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-				</select>
-			</div>
-
-			<div class="clearfix inner-section">
-				<div class="clearfix sub-section-prof-setting well">
-					<div>
-						<div class="well-small span12">
-							<select id="ddl-school-level">
-								<option>Test</option>
-								<option>Test</option>
-								<option>Test</option>
-								<option>Test</option>
-								<option>Test</option>
-								<option>Test</option>
-								<option>Test</option>
-								<option>Test</option>
-							</select>
-						</div>
-						<div class="span12">
-							<span class="span3"><strong>2013</strong></span>
-							<span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span><span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span><span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span>
-						</div>
-						<div class="span12">
-							<span class="span3"><strong>2012</strong></span>
-							<span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span><span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span><span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span>
-						</div>
-						<div class="span12">
-							<span class="span3"><strong>2011</strong></span>
-							<span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span><span class="span3">
-								<input type="checkbox" />
-								<label>Spring </label> </span>
-						</div>
-					</div>
-					<div class="row-fluid clearfix">
-						<span class="floatLeft"><a href="javascript:void(0)">Add Level</a> </span>
-						<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Finish</a> </span>
-					</div>
-				</div>
-			</div>
-			<div class="clearfix">
-				<h3>Blair Academy</h3><a href="javascript:void(0)">Add Sport</a>
-			</div>
-			<div class="clearfix">
-				<h4> Basketball</h4>
-			</div>
-			<div class="sub-section-prof-setting well well-large">
-				<div class="row-fluid">
-					<span class="span3"><strong>Winter 2013</strong></span>
-					<span class="span3">Varsity</span>
-					<span class="span3">Power Forward</span> 
-				</div>
-				<div class="row-fluid">
-					<span class="span3"><strong>Winter 2012</strong></span>
-					<span class="span3">Varsity</span>
-					<span class="span3">Power Forward</span>
-				</div>
-				<div class="row-fluid">
-					<span class="span3"><strong>Winter 2011</strong></span>
-					<span class="span3">Junior Varsity</span>
-					<span class="span3">Power Forward, Center, Small Forward</span>
-				</div>
-			</div>
-			<div class="clearfix">
-				<h4> Football</h4>
-			</div>
-			<div class="sub-section-prof-setting well well-large">
-				<div class="well-small">
-					<strong>Varsity</strong> X
-				</div>
-				<div class="span12">
-					<span class="span3"><strong>2013</strong></span>
-					<span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span>
-				</div>
-				<div class="span12">
-					<span class="span3"><strong>2012</strong></span>
-					<span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span>
-				</div>
-				<div class="span12">
-					<span class="span3"><strong>2011</strong></span>
-					<span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span>
-				</div>
-				<div class="well-small">
-					<strong>Junior Varsity</strong> X
-				</div>
-				<div class="span12">
-					<span class="span3"><strong>2013</strong></span>
-					<span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span>
-				</div>
-				<div class="span12">
-					<span class="span3"><strong>2012</strong></span>
-					<span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span>
-				</div>
-				<div class="span12">
-					<span class="span3"><strong>2011</strong></span>
-					<span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span><span class="span3">
-						<input type="checkbox" />
-						<label>Spring </label> </span>
-				</div>
-				<div class="row-fluid clearfix">
-					<span class="floatLeft"><a href="javascript:void(0)">Add Level</a> </span>
-					<span class="floatRight"><a href="javascript:void(0)" class="well-small btn-primary" >Finish</a> </span>
-				</div>
-			</div>
 		</div>
+		<!-- High School Section Ends-->
+
+		<!--Club Info Section Starts-->
+
+		<!--Club Info Section Ends-->
+
+		<!--Individual Sports Section Starts-->
 		<div class="row-fluid sub-section-prof-setting well well-large">
 			<div class="row-fluid">
 				<span class="spn-black-heading  well-small">Individual Sports</span>
@@ -205,11 +51,10 @@
 				</select>
 			</div>
 		</div>
-		<div id="fitnessbasic-wrap" class="clearfix"></div>
+		<!--Individual Sports Section Ends-->
 	</div>
+	<!-- Team Info Section Ends-->
 
-	<div class="row-fluid" id="section-club-prof-setting"></div>
-	<div class="row-fluid" id="section-sport-team-prof-setting"></div>
 	<div id="main-footer-prof-setting">
 
 	</div>
