--- a/html/css/app.css
+++ b/html/css/app.css
@@ -16,7 +16,7 @@
 
 ul { list-style:none; }
 
-header { border-bottom:1px solid #ccc; padding-top:10px; padding-bottom:10px; }
+header { border-bottom:1px solid #ccc; padding-top:10px; padding-bottom:10px; background-color: #000; }
 header .logo { float:left; margin:6px 0; }
 header .searchform { float:left; margin:6px 15px; }
 header .searchform form { margin-bottom:0; }
@@ -24,7 +24,7 @@ header .account { float:right; }
 header .photo { float:left; margin-right:10px; }
 header .photo img { width:32px; }
 header .userlinks { float:left; margin-top:5px; }
-header .userlinks .dropdown-toggle { min-width:200px; font-weight:bold; }
+header .userlinks .dropdown-toggle { min-width:200px; font-weight:bold; color:#fff; }
 header .userlinks .dropdown-menu { left:auto; right:0; top:25px; }
 header .signup-facebook,
 header .signup-email { margin:0 5px; }
