try to fix highschool error

--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,6 +1,6 @@
 <div>
-	<span class="span2">What State</span>
-	<input type="text" id="txt-school-state" />
+	<span class="span2">What State?</span>
+	<input type="text" id="txt-school-state" value="" />
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
