Worked On Deisgn and HTML for user setting page Improved architecture with new common methods in section view Filled Sports and complevel Implemented positions pop up on check box select

--- a/html/pages/profilesetting/templates/basic_info_header.html
+++ b/html/pages/profilesetting/templates/basic_info_header.html
@@ -5,10 +5,10 @@
 <div class="span6">
 	<h2>{{name}}</h2>
 	<p>
-		{{user_height}}
+		{{user_height}} INCHES
 	</p>
 	<p>
-		{{user_weight}}
+		{{user_weight}} LBS
 	</p>
 </div>
 {{/payload}}
