--- a/html/pages/profilesetting/profilesettings.css
+++ b/html/pages/profilesetting/profilesettings.css
@@ -31,3 +31,38 @@
 .sub-section-prof-setting label{   display: inline;}
 
 .pointer {cursor: pointer;}
+
+/*Seasons Section Starts Here*/
+.arrow {    background: none repeat scroll 0 0 #222222;
+    border: 3px solid #FFFFFF;
+    border-radius: 23px 23px 23px 23px;
+    color: #FFFFFF;
+    font-size: 26px;
+    font-weight: 100;
+    height: 38px;
+    line-height: 30px;
+    opacity: 0.5;
+    text-align: center;
+    width: 40px;
+    float:left}
+.arrow.down{}
+.arrow.up{}
+/*Seasons Section Ends Here*/
+
+/*Positions Section Starts Here*/
+.position-modal .modal-body span{
+    background: none repeat scroll 0 0 #444444;
+    border-radius: 6px 6px 6px 6px;
+    color: #E5E5E5;
+    margin-bottom: 2px;
+    margin-left: 0;
+    margin-right: 4px;
+    padding: 3px 4px;
+	
+}
+.position-modal .modal-body span.active{
+	background: #AAA;
+	background: #9A9A9A; 
+}
+ 
+/*Positions Section Ends Here*/
