Changed views ,created section view template

--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -3,10 +3,8 @@
 
 </div>
 
-<div class="row-fluid">
-	<div><img width="200" height="200" src='{{#filename}}'></div>
-    <input type="file" id="file" name="file"/>
-	<input type="button" id="imageup" value="Upload"/>
+<div id="main-content" class="row-fluid">
+
 </div>
 
 <div id="main-footer">
