#433 Added Error Message

--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -2,9 +2,8 @@
 <div id="main-header">
 
 </div>
-
+<div id="errormsg"></div>
 <div id="main-content" class="row-fluid">
-
 </div>
 
 <div id="main-footer">
