--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -2,3 +2,15 @@
     height: 18px;
     background: green;
 }
+.yellow
+{
+	background: yellow;
+}
+.red
+{
+	background: red;
+}
+.green
+{
+	background: green;
+}
