#433 image uplaod added drag and drop

--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -4,7 +4,7 @@
 </div>
 <div id="errormsg"></div>
 <div id="preview"></div>
-<div id="main-content" class="row-fluid">
+<div id="main-content">
 </div>
 
 <div id="main-footer">
