--- a/html/pages/imageup/templates/uploader.html
+++ b/html/pages/imageup/templates/uploader.html
@@ -1,2 +1,4 @@
-<input type="file" id="image_file" class="files" name="image_file[]" multiple />
-<input type="button" id="imageup" class="fileuploader" value="Upload">
+<div id="imageholder" class="imageholder">
+	<input type="file" id="image_file" class="files" name="image_file[]" multiple />
+	<input type="button" id="imageup" class="fileuploader" value="Upload">
+</div>
