Improve Layout View and profilesettings view by implementing extend methods Continue On Add Level Disable API Hits for Auto Complete in case of non-required keys like (arrow keys,shift,caps,tab etc) Dynamic Levels and Sports Dyamic Positions Pop up Positions Selection Fixed Bug for selecting item in autocomplete on tab and Enter Only

--- a/html/pages/profilesetting/templates/layout.html
+++ b/html/pages/profilesetting/templates/layout.html
@@ -32,23 +32,8 @@
 		<!--Club Info Section Ends-->
 
 		<!--Individual Sports Section Starts-->
-		<div class="row-fluid sub-section-prof-setting well well-large">
-			<div class="row-fluid">
-				<span class="spn-black-heading  well-small">Individual Sports</span>
-			</div>
-			<div>
-				<h6>Select All Sports You Compete In</h6>
-				<select class="ddl-individual" multiple="true">
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-					<option>Test</option>
-				</select>
-			</div>
+		<div id="section-individual-prof-setting">
+
 		</div>
 		<!--Individual Sports Section Ends-->
 	</div>
