--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,44 +1,36 @@
 <div>
 	<span class="span2">What State?</span>
-	<input type="text" id="txt-school-state" placeholder="Just Start Typing"/>
+	<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
 
 <div>
 	<span class="span2">What School?</span>
-	<input type="text" id="txt-school-school" placeholder="Just Start Typing"/>
+	<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
-
-<div>
-	<span class="span2">Add Sport</span>
-	<select id="ddl-school-sports">
-		<option value="">Select</option>
-	</select>
-	<p class="field-error"></p>
-	<p class="field-message"></p>
+<div class="div-sports-wrapper">
+<div id="def-school-sports-section" class="school-sports-section">
+	
 </div>
-
-<div class="clearfix inner-section">
-	<div class="clearfix sub-section-prof-setting well">
-		<div>
-			<div class="well-small span12">
-				<select id="ddl-school-complevel">
-					<option value="">Select Level</option>
-				</select>
-				<p class="field-error"></p>
-				<p class="field-message"></p>
-			</div>
-			<div id="div-school-seasons"></div>
-		</div>
-		<div class="row-fluid clearfix">
-			<span class="floatLeft"><a href="javascript:void(0)">Add Level</a> </span>
-			<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Finish</a> </span>
-		</div>
+	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
 	</div>
-</div>
+<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span>
+
+
+
+
+
+
+
+
+
+
+
+
+<!--SCHOOL LISTING SECTION HERE-->
 <div class="clearfix">
 	<h3>Blair Academy</h3><a href="javascript:void(0)">Add Sport</a>
 </div>
@@ -134,7 +126,3 @@
 	</div>
 </div>
 
-<!--	Modal Section to display positions	-->
-<div id="modal-school-positions" class="modal hide fade position-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-
-</div>
