default route changed to /home. Empty homepage with non-functional menu is being rendered.

--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -1,11 +1,11 @@
-<div id="main-header">
-
-</div>
+<div id="main-header"></div>
 
 <div id="main-content" class="row-fluid">
-
+	<div class="offset3 span2 text-center">
+		<strong>TOP RATED</strong>
+	</div>
+	<div id="top-rated" class="offset3 span8"></div>
+	<div id="menu" class="offset3 span7"></div>
+	<div id="search-results" class="offset3 span7"></div>
 </div>
-
-<div id="main-footer">
-
-</div>
+<div id="main-footer"></div>
