#433 Added bootstrap style progress bar,Alertify,final touch

--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -2,21 +2,23 @@
     height: 18px;
     background: green;
 }
-.yellow
-{
-	background: yellow;
-}
-.red
-{
-	background: red;
-}
-.green
-{
-	background: green;
-}
 .imageholder {
-  height: 75px;
+  height: 200px;
   border: 2px dashed #ccc;
   margin: 10px 5px 0 0;
+  vertical-align: middle;
 
+}
+.previewimg{
+	display:inline;
+	float: left;
+	margin: 10px;
+}
+#preview
+{
+	display:inline-block;
+}
+.fileuploader
+{
+	margin: 10px 5px 0 10px;
 }
