--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -2,9 +2,9 @@
 <div id="main-header">
 
 </div>
-<div id="errormsg"></div>
-<div id="preview"></div>
-<div id="main-content">
+<div id="errormsg" align="center"></div>
+<div id="preview" align="center"></div>
+<div id="main-content" align="center">
 </div>
 
 <div id="main-footer">
