--- a/html/pages/imageup/templates/uploader.html
+++ b/html/pages/imageup/templates/uploader.html
@@ -1,4 +1,5 @@
 <div id="imageholder" class="imageholder">
 	<input type="file" id="image_file" class="files" name="image_file[]" multiple />
-	<input type="button" id="imageup" class="fileuploader" value="Upload">
+	<br/>
+	<button class="btn fileuploader btn-primary" id="imageup" type="button">Upload</button>
 </div>
