--- a/html/pages/imageup/templates/error_template.html
+++ b/html/pages/imageup/templates/error_template.html
@@ -1,1 +1,4 @@
-<div class="{{color}}">{{msg}}</div>
+<div class="alert {{color}}">
+	<button type="button" class="close" data-dismiss="alert">&times;</button>
+	{{msg}}
+</div>
