--- a/html/pages/imageup/templates/preview_template.html
+++ b/html/pages/imageup/templates/preview_template.html
@@ -1,3 +1,3 @@
 {{#data}} 
-	<img src="{{filesrc}}" width="{{width}}" height="{{height}}" title="{{title}}">
+	<div class="previewimg"><img src="{{filesrc}}" class="img-polaroid" width="{{width}}" height="{{height}}" title="{{title}}"><div id="{{preview_id}}"></div></div>
 {{/data}} 
