#433 resolved bugs with rotation

--- a/html/pages/imageup/templates/preview_template.html
+++ b/html/pages/imageup/templates/preview_template.html
@@ -1,7 +1,7 @@
 {{#data}} 
 	<div class="previewimg">
 		<div class="previewimgsrc" id="{{preview_id}}pre">
-			<img src="{{filesrc}}" class="img-polaroid" width="{{width}}" height="{{height}}" title="{{title}}">
+			<img src="{{filesrc}}" class="img-polaroid" width="{{width}}" height="{{height}}" title="{{title}}" draggable="false">
 			<input type="hidden" id="{{preview_id}}rotang" value="0">
 		</div>
 		<div id="{{preview_id}}" class="previewprogress"></div>
