Added ids to divisions in menu.html

--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,14 +1,14 @@
-<div class="dropdown span2">
+<div id="views" class="dropdown span2">
 	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> VIEWS <span
 		class="caret"></span>
 	</a>
 </div>
-<div class="dropdown span2">
+<div id="sport" class="dropdown span2">
 	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> SPORT <span
 		class="caret"></span>
 	</a>
 </div>
-<div class="dropdown span2">
+<div id="location" class="dropdown span2">
 	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 		LOCATION <span class="caret"></span>
 	</a>
