Implemented club view

--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -1,18 +1,18 @@
 <div>
 	<span class="span2">What State?</span>
-	<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
+	<input type="text" id="txt-club-state" placeholder="Just Start Typing" tabindex="0"/>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
 
 <div>
-	<span class="span2">What School?</span>
-	<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
+	<span class="span2">What Club?</span>
+	<input type="text" id="txt-club-club" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
 <div class="div-sports-wrapper">
-<div id="def-school-sports-section" class="school-sports-section">
+<div id="def-club-sports-section" class="club-sports-section">
 	
 </div>
 	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
@@ -22,7 +22,7 @@
 
 
 
-<!--SCHOOL LISTING SECTION HERE-->
+<!--CLUBs LISTING SECTION HERE-->
 <div class="clearfix">
 	<h3>Blair Academy</h3><a href="javascript:void(0)">Add Sport</a>
 </div>
