--- a/html/pages/profilesetting/templates/layout.html
+++ b/html/pages/profilesetting/templates/layout.html
@@ -28,7 +28,19 @@
 		<!-- High School Section Ends-->
 
 		<!--Club Info Section Starts-->
+<div id="section-club-prof-setting" class="row-fluid sub-section-prof-setting well well-large">
+			<div class="row-fluid">
+				<span class="spn-black-heading  well-small">Clubs</span>
+			</div>
 
+			<div id="btn-Add-School" class="clearfix div-add-dotted well-small">
+				+ Add a Club
+			</div>
+			<div id="content-club-prof-setting">
+			</div>
+			<br/>
+
+		</div>
 		<!--Club Info Section Ends-->
 
 		<!--Individual Sports Section Starts-->
