--- a/html/pages/profilesetting/templates/sportslevel.html
+++ b/html/pages/profilesetting/templates/sportslevel.html
@@ -2,7 +2,8 @@
 <div class="section-sportslevel">
 <div>
 	<span class="span2">Choose Sport</span>
-	<select class="ddl-school-sports">
+	<!-- class="ddl-school-sports"-->
+	<select class="ddl-sports">
 		<option value="">Select Sport</option>
 		{{#sports}}
 			<option value="{{sport_id}}">{{sport_name}}</option>
@@ -11,7 +12,7 @@
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 	
-
+<span ><a href="javascript:void(0)" class="btn-Remove-Sport">Remove</a> </span>
 </div>
 
 <div class="clearfix inner-section">
@@ -19,7 +20,8 @@
 		<div>
 			<div class="spn-black-heading spn-sport-name">
 			</div>
-			<div class="div-school-sports-level">
+			<!--class="div-school-sports-level"-->
+			<div class="div-sports-level">
 				
 				
 			</div>
