--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -23,29 +23,8 @@
 
 
 <!--SCHOOL LISTING SECTION HERE-->
-<div class="clearfix">
-	<h3>Blair Academy</h3><a href="javascript:void(0)">Add Sport</a>
-</div>
-<div class="clearfix">
-	<h4> Basketball</h4>
-</div>
-<div class="sub-section-prof-setting well well-large">
-	<div class="row-fluid">
-		<span class="span3"><strong>Winter 2013</strong></span>
-		<span class="span3">Varsity</span>
-		<span class="span3">Power Forward</span>
-	</div>
-	<div class="row-fluid">
-		<span class="span3"><strong>Winter 2012</strong></span>
-		<span class="span3">Varsity</span>
-		<span class="span3">Power Forward</span>
-	</div>
-	<div class="row-fluid">
-		<span class="span3"><strong>Winter 2011</strong></span>
-		<span class="span3">Junior Varsity</span>
-		<span class="span3">Power Forward, Center, Small Forward</span>
-	</div>
-</div>
+<!--lIST-->
+<!--lIST-->
 <div class="clearfix">
 	<h4> Football</h4>
 </div>
