--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -1,12 +1,15 @@
-
-<div id="main-header">
-
-</div>
-<div id="errormsg" align="center"></div>
-<div id="preview" align="center"></div>
-<div id="main-content" align="center">
-</div>
-
-<div id="main-footer">
-
+<a href="#imgUploadModal" role="button" class="btn" data-toggle="modal">Upload Image</a>
+<div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		<h3 id="label">Image Uploader</h3>
+	</div>
+	<div class="modal-body" style="max-height: 200px !important;">
+		<div id="errormsg"></div>
+		<div id="preview"></div>
+		
+	</div>
+	<div id="main-content" class="modal-footer"></div>
+		
+		
 </div>
