--- a/html/pages/imageup/templates/preview_template.html
+++ b/html/pages/imageup/templates/preview_template.html
@@ -1,8 +1,9 @@
 {{#data}} 
-	<div class="previewimg">
+	<div class="previewimg" id="{{preview_id}}group"align="center">
 		<div id="{{preview_id}}rot" class="previewrotate"><button id="{{preview_id}}pre img" value="{{preview_id}}" class="btn rotate">Rotate</button></div>
-		<div class="previewimgsrc" id="{{preview_id}}pre">
+		<div class="previewimgsrc" id="{{preview_id}}pre" align="center">
 			<img src="{{filesrc}}" class="img-polaroid" width="{{width}}" height="{{height}}" title="{{title}}" draggable="false">
+			<button type="button" class="close closepreview" value ="{{preview_id}}"data-dismiss="{{preview_id}}">&times;</button>
 			<input type="hidden" id="{{preview_id}}rotang" value="0">
 		</div>
 		<div id="{{preview_id}}" class="previewprogress"></div>
