added state select-dropdown under location.

--- a/html/packages/location/templates/state-item.html
+++ b/html/packages/location/templates/state-item.html
@@ -1,5 +1,6 @@
-
+<!-- Modified by Rishabh -->
+<!-- changed tags from {{state_*}} to {{*}}  -->
 {{#payload}}
-<div class="state-{{state_id}}">{{state_name}}</div>
+<div class="state-{{id}}">{{name}}</div>
 {{/payload}}
 
