--- a/html/pages/home/templates/image-item.html
+++ b/html/pages/home/templates/image-item.html
@@ -1,4 +1,4 @@
 {{#payload}}
-<img width="300" height="300" src="{{user_picture}}" alt="{{name}}" vspace="5"
+<img width="300" height="300" src="{{image_path}}" alt="{{image_title}}" vspace="5"
 	hspace="6" />
 {{/payload}}
