--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,17 +1,29 @@
 <div id="views" class="dropdown span2">
-	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> VIEWS <span
+	<a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)"> VIEWS <span
 		class="caret"></span>
 	</a>
+	<ul class="dropdown-menu">
+		{{#views.browse}}
+			<li><a href="javascript:void(0)">{{name}}</a></li> 
+		{{/views.browse}} 
+		{{#views.time}}
+			<li><a href="javascript:void(0)">{{name}}</a></li> 
+		{{/views.time}}
+	</ul>
 </div>
 <div id="sport" class="dropdown span2">
-	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> SPORT <span
+	<a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)"> SPORT <span
 		class="caret"></span>
 	</a>
+	<div id="sport-dd">
+	</div>
 </div>
 <div id="location" class="dropdown span2">
-	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+	<a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
 		LOCATION <span class="caret"></span>
 	</a>
+	<div id="location-dd" class="dropdown-menu">
+	</div>
 </div>
 <div class="span5">
 	<div class="span2">SEARCH</div>
