#433 Changed style where to add imageurl

--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -1,3 +1,12 @@
+
+<div id="url" class="url">URL    
+	<select id="url_tag">
+	  <option value="user">Users</option>
+	  <option value="game">Games</option>
+	  <option value="team">Teams</option>
+	</select>
+    <input type="text" name="id_tag" id="id_tag" placeholder="ID"/>
+</div>
 <a href="#imgUploadModal" role="button" class="btn" data-toggle="modal">Upload Image</a>
 <div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-header">
