Individual Sports Listing and Save Functionality High SchoolTeams View with Save functionality

--- a/html/pages/profilesetting/profilesettings.css
+++ b/html/pages/profilesetting/profilesettings.css
@@ -4,6 +4,7 @@
 .floatRight {
 	float: right;
 }
+.displayNone{display:none}
 .section-teams-prof-setting .spn-black-heading {
 	background-color: #444;
 	color: #FFF;
