--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -1,3 +1,11 @@
+<div class="row-fluid">
+	<span class="spn-black-heading  well-small">Clubs</span>
+</div>
+
+<div id="btn-Add-club" class="clearfix div-add-dotted well-small">
+	+ Add a Club
+</div>
+<div id="section-Add-Sports-club" class="displayNone">
 <div>
 	<span class="span2">What State?</span>
 	<input type="text" id="txt-club-state" placeholder="Just Start Typing" tabindex="0"/>
@@ -11,42 +19,23 @@
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
-<div class="div-sports-wrapper">
-<div id="def-club-sports-section" class="club-sports-section">
-	
-</div>
+<div class="div-sports-wrapper displayNone">
+	<div id="def-club-sports-section" class="school-sports-section">
+
+	</div>
 	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
-	</div>
+</div>
 <span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span>
-
-
-
-
+</div>
 <!--CLUBs LISTING SECTION HERE-->
-<div class="clearfix">
-	<h3>Blair Academy</h3><a href="javascript:void(0)">Add Sport</a>
+<!--lIST-->
+<div class="row-fluid section-team-list-detail-club">
+
 </div>
-<div class="clearfix">
-	<h4> Basketball</h4>
-</div>
-<div class="sub-section-prof-setting well well-large">
-	<div class="row-fluid">
-		<span class="span3"><strong>Winter 2013</strong></span>
-		<span class="span3">Varsity</span>
-		<span class="span3">Power Forward</span>
-	</div>
-	<div class="row-fluid">
-		<span class="span3"><strong>Winter 2012</strong></span>
-		<span class="span3">Varsity</span>
-		<span class="span3">Power Forward</span>
-	</div>
-	<div class="row-fluid">
-		<span class="span3"><strong>Winter 2011</strong></span>
-		<span class="span3">Junior Varsity</span>
-		<span class="span3">Power Forward, Center, Small Forward</span>
-	</div>
-</div>
-<div class="clearfix">
+
+<!--lIST-->
+
+<!-- <div class="clearfix">
 	<h4> Football</h4>
 </div>
 <div class="sub-section-prof-setting well well-large">
@@ -116,5 +105,5 @@
 		<span class="floatLeft"><a href="javascript:void(0)">Add Level</a> </span>
 		<span class="floatRight"><a href="javascript:void(0)" class="well-small btn-primary" >Finish</a> </span>
 	</div>
-</div>
+</div> -->
 
