--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,3 +1,11 @@
+<div class="row-fluid">
+	<span class="spn-black-heading  well-small">High School</span>
+</div>
+
+<div id="btn-Add-School" class="clearfix div-add-dotted well-small">
+	+ Add a School
+</div>
+<div id="section-Add-Sports-school" class="displayNone"> 
 <div>
 	<span class="span2">What State?</span>
 	<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
@@ -11,21 +19,22 @@
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
-<div class="div-sports-wrapper">
-<div id="def-school-sports-section" class="school-sports-section">
-	
-</div>
-	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
+<div class="div-sports-wrapper displayNone">
+	<div id="def-school-sports-section" class="school-sports-section">
+
 	</div>
+	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
+</div>
 <span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span>
-
-
-
-
+</div>
 <!--SCHOOL LISTING SECTION HERE-->
 <!--lIST-->
+<div class="row-fluid section-team-list-detail">
+
+</div>
+
 <!--lIST-->
-<div class="clearfix">
+<!-- <div class="clearfix">
 	<h4> Football</h4>
 </div>
 <div class="sub-section-prof-setting well well-large">
@@ -95,5 +104,5 @@
 		<span class="floatLeft"><a href="javascript:void(0)">Add Level</a> </span>
 		<span class="floatRight"><a href="javascript:void(0)" class="well-small btn-primary" >Finish</a> </span>
 	</div>
-</div>
+</div> -->
 
