--- a/html/pages/profilesetting/templates/individualsports.html
+++ b/html/pages/profilesetting/templates/individualsports.html
@@ -3,16 +3,17 @@
 		<span class="spn-black-heading  well-small">Individual Sports</span>
 	</div>
 	<div>
-		<h6>Select All Sports You Compete In</h6>
+		<!-- <h6>Select All Sports You Compete In</h6>
 		<span class="row-fluid">
 			<input type="checkbox" class="select-all" />
-			<label>Select All</label> </span>
+			<label>Select All</label> </span> -->
 			<div class="well sports-list-individial-sports">
 
 </div>
+<div class ="well sports-list-user-individual-sports"
 	</div>
 	<div class="row-fluid">
-		<a href="javascript:void(0)" class="floatRight well-small btn-primary btn-Save-Individual-Sports" >Save</a>
+		<!--<a href="javascript:void(0)" class="floatRight well-small btn-primary btn-Save-Individual-Sports" >Save</a> -->
 	</div>
 	
 </div>
