#433 - Image upload complete , added to profile page

--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -5,7 +5,7 @@
 <div class="row-fluid">
 	<div class="span4" id="main-sidebar">
 
-		<div id="add-media" class="clearfix" style="border:1px solid green;height:10px;">
+		<div id="add-media" class="clearfix" style="border:1px solid green;height:auto;">
 			add media
 		</div>
 
