#433 image upload test1

--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -9,7 +9,7 @@
 		<div id="preview"></div>
 		
 	</div>
-	<div id="main-content" class="modal-footer">
+	<div id="main-content-img" class="modal-footer">
 		
 	</div>
 		
