--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -5,21 +5,23 @@
 		<div class="dropdown">
 			<a href="javascript:void(0)"> Browse <span class="caret"></span></a>
 			<div class="clearfix"></div>
-			<ul class="dropdown-menu" style="display:block;position:relative;">
+			<ul class="dropdown-menu" style="display: block; position: relative;">
 				{{#views.browse}}
-				<li ><a class="browse" href="javascript:void(0)">{{name}}</a></li> {{/views.browse}}
+				<li><a class="browse" href="javascript:void(0)">{{name}}</a></li>
+				{{/views.browse}}
 			</ul>
 		</div>
 		<br />
 		<div class="clearfix">
 			<a href="javascript:void(0)"> Time <span class="caret"></span></a>
 			<div class="clearfix"></div>
-			<ul class="dropdown-menu" style="display:block;position:relative;">
+			<ul class="dropdown-menu" style="display: block; position: relative;">
 				{{#views.time}}
-				<li><a class="time" href="javascript:void(0)">{{name}}</a></li> {{/views.time}}
+				<li><a class="time" href="javascript:void(0)">{{name}}</a></li>
+				{{/views.time}}
 			</ul>
 		</div>
-		<br/>
+		<br />
 	</div>
 </div>
 <div id="sport" class="menu span2">
@@ -29,7 +31,10 @@
 </div>
 <div id="location" class="menu span2">
 	<a href="javascript:void(0)"> LOCATION <span class="caret"></span></a>
-	<div class="dd"></div>
+	<div class="dd">
+		<div class="state"></div>
+		<div class="city"></div>
+	</div>
 </div>
 <div class="span5">
 	<div class="span2">SEARCH</div>
